# pysharefile

./: .bump2version.cfg  .bumpversion.cfg  pyproject.toml
pysharefile/: __init__.py  helpers.py  models.py
sharepyle/: __init__.py  creds.py  entities.py  listener.py
tests/: test_pysharefile.py
